<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllReviewsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:id = "@+id/scrollableLayout"
            android:nestedScrollingEnabled="true"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/reviewListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_below = "@id/addBtnLayout"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:scrollbars="vertical"
            android:background="#f0f0f0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:id = "@+id/extra"
            android:orientation="vertical"
            android:layout_below = "@id/reviewListLayout"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:id = "@+id/addBtnLayout"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent">
            <Button
                android:id = "@+id/addReviewBtn"
                android:layout_width="match_parent"
                android:text="Add Review"
                android:backgroundTint="@color/yellow"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_navigation_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
