...
            android:id = "@+id/h"
            android:layout_below="@id/g"
            android:gravity="start|center_vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/editBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:visibility="gone"
                android:textColor="#000"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="70dp"
                android:textAllCaps="false"
                android:text="Edit Review" />


            <Button
                android:id="@+id/delBtn"
                android:layout_width="130dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Delete Review"
                android:textColor="#000"
                android:textAllCaps="false"
                android:textSize="16dp" />

        </LinearLayout>

...
